--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-dropdown-picker": "^5.4.6",
