--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.74.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
