--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-gifted-charts": "^1.4.10",
     "react-native-image-picker": "^7.1.2",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
