--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gifted-charts": "^1.4.10",
     "react-native-image-picker": "^7.1.2",
     "react-native-ionicons": "^4.6.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
