--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
+    "gifted-charts-core": "^0.1.6",
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-dropdown-picker": "^5.4.6",
@@ -28,6 +29,7 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
+    "react-native-svg-transformer": "^1.4.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
